[gd_scene load_steps=2 format=3 uid="uid://da55dwfg0iilr"]

[ext_resource type="Script" path="res://Levels/NavigationControl.gd" id="1_6jav7"]

[node name="NavigationControl" type="LineEdit"]
offset_left = 124.0
offset_top = 168.0
offset_right = 220.0
offset_bottom = 199.0
focus_mode = 0
alignment = 1
editable = false
selecting_enabled = false
script = ExtResource("1_6jav7")
options = Array[String](["29", "49", "99"])

[node name="Left" type="Button" parent="."]
layout_mode = 0
offset_left = -28.0
offset_right = 2.0
offset_bottom = 31.0
focus_mode = 0
text = "<"

[node name="Right" type="Button" parent="."]
layout_mode = 0
offset_left = 92.0
offset_right = 122.0
offset_bottom = 31.0
focus_mode = 0
text = ">"

[connection signal="button_down" from="Left" to="." method="_on_left_button_down"]
[connection signal="button_down" from="Right" to="." method="_on_right_button_down"]
